# py-bay-fast-api

./: .env.example  Makefile  docker-compose.yml  py-bay-fast-api.postman_collection.json  pyproject.toml
.github/workflows/: release.yaml
app/: config.py  exceptions.py  main.py
app/entities/: user.py
app/infrastructure/: auth.py
app/infrastructure/db/: dynamo.py  dynamo_init.py  postgres.py
app/interface_adapters/controllers/: bookings.py  concerts.py  users.py
app/interface_adapters/repositories/: booking_repository.py  concert_repository.py  user_repository.py
app/schemas/: booking.py  concert.py  user.py
app/use_cases/: booking_use_cases.py  concert_use_cases.py  user_use_cases.py
deployment/: Dockerfile
docs/: architecture.html
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
k8s/local/: dynamodb-local.yaml  postgres.yaml
scripts/: seed_concerts.py
tests/: conftest.py  test_bookings.py  test_concerts.py  test_users.py
